# meeting-recorder

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml
MeetingRecorder/: Package.swift
MeetingRecorder/Sources/: AudioTapManager.swift  AudioWriter.swift  Info.plist  Log.swift  MicrophoneCapture.swift  RingBuffer.swift  main.swift
docs/: POST_REBOOT_SETUP.md
raycast/: catch-me-up.sh  extract-meeting-tasks.sh  force-close-recording.sh  open-live-transcript.sh  start-live-transcript.sh  start-meeting-recording.sh  stop-live-transcript.sh  stop-meeting-recording.sh
scripts/: MeetingBar-Stop.applescript  apply-domain-corrections.py  backfill-diarization.py  batch-enroll.sh  conftest.py  diarize-transcript.py  domain-corrections.json  enroll-from-summary.py  enroll-speakers.py  eventStartScript.applescript  live-transcript-viewer.py  meetingbar-trigger-recording.applescript  quicktime-start-recording.applescript  quicktime-stop-recording.applescript  run-backfill-once.sh  run-enroll-from-summary.sh  save-meeting-metadata.py  setup-diarization.sh  signal-meeting-start.sh  speaker_library.py  start-live-transcript.sh  start-recording.sh  status.sh  stop-live-transcript.sh  stop-recording.sh  test_apply_domain_corrections.py  test_diarize.py  test_enroll_speakers_rewrite.py  test_identification_integration.py  test_speaker_library.py  transcribe-and-process.sh
scripts/archive/: MeetingBar-Start.applescript  start-recording.sh  stop-recording.sh
